# Jatai

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  REQUIREMENTS.md  ToDo.md  pyproject.toml  requirements.txt
OUTBOX/: _phase7_directory_recreate_recovery_report_2026-04-02.md
docs/: helloworld.md  jatai.1
docs/development/: repository-structure.md
docs/getting-started/: configuration.md  quickstart.md
docs/operations/: cli-reference.md  garbage-collection.md  prefix-states.md  retry-and-health.md
docs/security/: safe-operations.md
src/jatai/: __init__.py  tui.py
src/jatai/cli/: __init__.py  main.py
src/jatai/core/: __init__.py  autostart.py  daemon.py  delivery.py  docs.py  gc.py  node.py  prefix.py  registry.py  retry.py  sysstate.py  uninstall.py
src/jatai/docs/architecture/: overview.md
src/jatai/docs/cli/: reference.md
src/jatai/docs/configuration/: options.md
src/jatai/docs/getting-started/: installation.md  quickstart.md
tests/: conftest.py  test_cli.py  test_daemon.py  test_delivery.py  test_docs.py  test_dummy.py  test_gc.py  test_node.py  test_prefix.py  test_registry.py  test_retry.py  test_sysstate.py  test_uninstall.py
tools/: LICENSE  manual_test_helper.sh  set_version
