[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jatai"
version = "0.6.3"
description = "Local file-system message bus for scripts and agents"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Enzo 'Zvorky' Zavorski Delevatti" },
]
dependencies = [
    "typer==0.12.3",
    "click==8.1.7",
    "pyyaml==6.0.1",
    "watchdog==4.0.1",
    "filelock==3.16.1",
    "textual==0.58.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==1.3.0",
]

[project.scripts]
jatai = "jatai.cli.main:run"

[project.urls]
Homepage = "https://github.com/zvorky/jatai"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/man/man1" = ["docs/jatai.1"]
